--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,6 +36,9 @@ main {
 }
 
 .prepreview {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 550px;  
     height: 500px;
     top: 60px;
@@ -64,7 +67,69 @@ main {
     color: #d6cdc3;
 
 }
+.cd {   
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width:107.39px;
+    height: 150px;
+    position: absolute;
+    border: solid 1px black;
+    border-radius: 5px;
+}
+.cd div {
+    border: solid 1px rgb(148, 51, 51);
+}
 
+.cdstema {
+    position: absolute;
+    margin-top: -130px;
+    max-width: 107px;
+    min-height: 20px;
+    width: 100px;
+    font-size: 10px;
+    color: white;
+    text-align: center;
+    justify-content: center;
+    align-content: center;
+    overflow: hidden; 
+    word-wrap: break-word; 
+    text-overflow: ellipsis;
+}
+.cdstexto {
+    position: absolute;
+    max-width: 107px;
+    min-height: 90px;
+    top: 14%;
+    width: 100px;
+    font-size: 10px;
+    color: white;
+    text-align: center;
+    justify-content: center;
+    align-content: center;
+    overflow: hidden; 
+    word-wrap: break-word; 
+    text-overflow: ellipsis;
+    
+}
+.cdsowner {
+    position: absolute;
+    max-width: 100px;
+    width: 107px;
+    max-height: 10px;
+    min-height: 10px;
+    top: 113px;
+    font-size: 10px;
+    text-align: center;
+    justify-content: center;
+    align-content: center;
+    font-size: 8px;
+    color: white;
+    overflow: hidden; 
+    word-wrap: break-word; 
+    text-overflow: ellipsis;
+}
 .cardseditor {
     height: 250px;
     width: 550px;
@@ -87,21 +152,35 @@ main {
 .cards {
     display: flex;
     height: 200px;
+    border: solid black 1px;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 20%;
+    gap: 20%    ;
 }
-.cards canvas {
-    width: 105.88px;
+
+.imgfront {
+    position: relative;
+
+}
+.cards img {
+    width: 107,39px;
     height: 150px;
-    max-width: 105.88px;
+    max-width:107,39px;
     max-height: 150px;
     background-color: #465743;
     border-radius: 5px;
 }
+.canvaspreview {
+    max-height: 450px;
+    max-width: 318.18px;
+    height: 450px;
+    width: 318.18px;
+    background-color: white;
+}
 .card {
-
+    width: 200,39px;
+    height: 150px;
     display: flex;
     flex-direction: column;
     gap: 10px;
