--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,6 @@
 body {
-    background-image: url('Imagens/Texture.png'); 
-    background-repeat: repeat; 
-    background-size: 100px;
+    
+    background-color: #121812;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,7 +8,7 @@ body {
 
 }
 main {
-    border-radius: 20px;
+    border-radius: 20px;    
     max-width: 1200px;
     max-height: 800px;
     width: 1200px;
@@ -59,13 +58,20 @@ main {
     gap: 5px;
 }
 .ttlpreview {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 10px 0px 0px 0px;
     height: 90px;
-    width: 600px
+    width: 600px;
+    text-align: center;
 }
 .ttlpreview h1 {
     color: #d6cdc3;
 
+}
+.cartaselecionada {
+    border: solid 3px #68b35a;
 }
 
 .cancard {
